syntax = "proto3";

package com.improving.app.gateway.domain.demoScenario;

import "scalapb/scalapb.proto";
import "validate/validate.proto";

message StartScenario {
    uint32 num_tenants = 1 [(validate.rules) = {int32: {gt: 0}}];
    //uint32 max_orgs_depth = 2 [(validate.rules) = {int32: {gt: 2}}];
    //uint32 max_orgs_width = 3 [(validate.rules) = {int32: {gt: 2}}];
    uint32 num_members_per_org = 4 [(validate.rules) = {int32: {gt: 1}}];
    //uint32 num_events_per_org = 5 [(validate.rules) = {int32: {gt: 1}}];
    //uint32 num_tickets_per_event = 7 [(validate.rules) = {int32: {gt: 1}}];
}

message DemoScenarioRequest{
    option (scalapb.message).sealed_oneof_extends = "com.improving.app.common.serialize.PBMsgOneOfSerializable";

    oneof sealed_value {
        StartScenario scenario = 1;
    }
}