syntax = "proto3";
package com.improving.app.store.domain;

import "com/improving/app/common/domain/ids.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";
import "scalapb/validate.proto";
import "validate/validate.proto";

option (scalapb.options) = {
  scope: FILE
  [scalapb.validate.file] {
    validate_at_construction: true
  }
};

enum StoreStates {
  STORE_STATES_UNINITIALIZED = 0;
  STORE_STATES_DRAFT = 1;
  STORE_STATES_READY = 2;
  STORE_STATES_OPEN = 3;
  STORE_STATES_CLOSED = 4;
  STORE_STATES_DELETED = 5;
}

message StoreMetaInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  google.protobuf.Timestamp created_on = 1;
  com.improving.app.common.domain.MemberId created_by = 2;
  google.protobuf.Timestamp last_updated = 3;
  com.improving.app.common.domain.MemberId last_updated_by = 4;
  StoreStates state = 5;
}

message StoreInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  string name = 1 [(validate.rules).string.min_len = 1];
  string description = 2 [(validate.rules).string.min_len = 1];
  repeated common.domain.Sku products = 3;
  common.domain.EventId event = 4;
  //TODO: implement once respective services are up
  //VenueId venue = 5;
  //LocationId location = 6;
  common.domain.OrganizationId sponsoring_org = 7;
}

message EditableStoreInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  optional string name = 1 [(validate.rules).string.min_len = 1];
  optional string description = 2 [(validate.rules).string.min_len = 1];
  repeated common.domain.Sku products = 3;
  optional common.domain.EventId event = 4;
  //optional VenueId venue = 5;
  //optional LocationId location = 6;
  optional common.domain.OrganizationId sponsoring_org = 7;
}